--- a/book.html
+++ b/book.html
@@ -19,72 +19,72 @@
         <!-- PRUEBA SLIDER INICIO-->
         
         <div id="c-slider">
-            <div id="slider">
+            <div id="slider" role="slider">
                 <section>
-                    <img src="img/alvaross1.jpg" alt="">
+                    <img src="img/alvaross1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/alvaross2.jpg" alt="">
+                    <img src="img/alvaross2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/alvaross4.jpg" alt="">
+                    <img src="img/alvaross4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/alvaross5.jpg" alt="">
+                    <img src="img/alvaross5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/alvaross6.jpg" alt="">
+                    <img src="img/alvaross6.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah1.jpg" alt="">
+                    <img src="img/angelah1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah2.jpg" alt="">
+                    <img src="img/angelah2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah3.jpg" alt="">
+                    <img src="img/angelah3.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah4.jpg" alt="">
+                    <img src="img/angelah4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah5.jpg" alt="">
+                    <img src="img/angelah5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah6.jpg" alt="">
+                    <img src="img/angelah6.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah7.jpg" alt="">
+                    <img src="img/angelah7.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/angelah10.jpg" alt="">
+                    <img src="img/angelah10.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
                 </section>
                 <section>
-                    <img src="img/cclee1.jpg" alt=""></section>
+                    <img src="img/cclee1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz"></section>
                 <section>
-                    <img src="img/jesusclares2.jpg" alt=""></section>
+                    <img src="img/jesusclares2.jpg" alt="Fotografía de Sherezade Atienzar - Actriz"></section>
                 <section>
-                    <img src="img/jesusclares3.jpg" alt=""></section>
+                    <img src="img/jesusclares3.jpg" alt="Fotografía de Sherezade Atienzar - Actriz"></section>
                 <section>
-                    <img src="img/jesusclares4.jpg" alt=""></section>
+                    <img src="img/jesusclares4.jpg" alt="Fotografía de Sherezade Atienzar - Actriz"></section>
                 <section>
-                    <img src="img/jesusclares5.jpg" alt=""></section>
+                    <img src="img/jesusclares5.jpg" alt="Fotografía de Sherezade Atienzar - Actriz"></section>
 
             </div>
-            <div id="btn-prev">&#60;</div>
-            <div id="btn-next">&#62;</div>
+            <div id="btn-prev" tabindex="1" role="button" aria-label="next">&#60;</div>
+            <div id="btn-next" tabindex="2" role="button" aria-label="previous">&#62;</div>
         </div>
         <script src="js/slider.js"></script>
        
         <!-- PRUEBA SLIDER FINAL-->
         <div id="menu">
-            <aside class="menu_lateral">
+            <aside class="menu_lateral" role="menu">
                 <ul id="menu_lista">
-                    <a href="index.html"><li>Inicio</li></a>
-                    <a href="book.html"><li>Book</li></a>
-                    <a href="showreel.html"><li>Showreel</li></a>
-                    <a href="cv.html"><li>Curriculum</li></a>
-                    <a href="representacion.html"><li>Representación</li></a>
+                    <a href="index.html" aria-label="index" role="menuitem"><li>Inicio</li></a>
+                    <a href="book.html" aria-label="book" role="menuitem"><li>Book</li></a>
+                    <a href="showreel.html" aria-label="showreel" role="menuitem"><li>Showreel</li></a>
+                    <a href="cv.html" aria-label="curriculum" role="menuitem"><li>Curriculum</li></a>
+                    <a href="representacion.html" aria-label="representation" role="menuitem"><li>Representación</li></a>
                 </ul>
             </aside>
         </div>
