--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
 
 <body id="home">
 
-    <div id="nombre">
+    <div id="nombre" role="header" aria-label="Sherezade Atienzar">
         <h1>Sherezade Atienzar</h1>
     </div>
 
-    <div id="conjunto"> <!--
-        <div id="cara" class="embed-container">
-            <img src="/img/Sherezade_025_Web.jpeg">
-        </div>
-    -->
+    <div id="conjunto"> 
         <div id="menu">
-            <aside class="menu_lateral">
-                <ul id="menu_lista">
-                    <a href="index.html"><li>Inicio</li></a>
-                    <a href="book.html"><li>Book</li></a>
-                    <a href="showreel.html"><li>Showreel</li></a>
-                    <a href="cv.html"><li>Curriculum</li></a>
-                    <a href="representacion.html"><li>Representación</li></a>
-                </ul>
-            </aside>
+            <aside class="menu_lateral" role="menu">
+                    <ul id="menu_lista">
+                        <a href="index.html" aria-label="index" role="menuitem"><li>Inicio</li></a>
+                        <a href="book.html" aria-label="book" role="menuitem"><li>Book</li></a>
+                        <a href="showreel.html" aria-label="showreel" role="menuitem"><li>Showreel</li></a>
+                        <a href="cv.html" aria-label="curriculum" role="menuitem"><li>Curriculum</li></a>
+                        <a href="representacion.html" aria-label="representation" role="menuitem"><li>Representación</li></a>
+                    </ul>
+                </aside>
         </div>
 
     </div>
