--- a/showreel.html
+++ b/showreel.html
@@ -10,27 +10,27 @@
 
 <body id="no_home">
 
-    <div id="nombre">
+    <div id="nombre" aria-label="Sherezade Atienzar">
         <h1>Sherezade Atienzar</h1>
     </div>
 
     <div id="conjunto"> 
-        <div id="video">
+        <div id="video" aria-label="video">
             <h3>SHOWREEL</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/pvha6AJthbY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
 
         <div id="menu">
-            <aside class="menu_lateral">
-                <ul id="menu_lista">
-                    <a href="index.html"><li>Inicio</li></a>
-                    <a href="book.html"><li>Book</li></a>
-                    <a href="showreel.html"><li>Showreel</li></a>
-                    <a href="cv.html"><li>Curriculum</li></a>
-                    <a href="representacion.html"><li>Representación</li></a>
-                </ul>
-            </aside>
+            <aside class="menu_lateral" role="menu">
+                    <ul id="menu_lista">
+                        <a href="index.html" aria-label="index" role="menuitem"><li>Inicio</li></a>
+                        <a href="book.html" aria-label="book" role="menuitem"><li>Book</li></a>
+                        <a href="showreel.html" aria-label="showreel" role="menuitem"><li>Showreel</li></a>
+                        <a href="cv.html" aria-label="curriculum" role="menuitem"><li>Curriculum</li></a>
+                        <a href="representacion.html" aria-label="representation" role="menuitem"><li>Representación</li></a>
+                    </ul>
+                </aside>
         </div>
 
     </div>
