--- a/index.html
+++ b/index.html
@@ -1,59 +1,60 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="David Moreno">
-    <link rel="stylesheet" href="css/styles.css">
+    <!--<link rel="stylesheet" href="css/styles.css">-->
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <title>Sherezade Atienzar</title>
 </head>
-
 <body id="home">
-
+    
     <div class="container-fluid">
         <div class="row">
-            <div id="nombre" class="col-sm-12" role="header" aria-label="Sherezade Atienzar">
+            <div id="nombre" class="col-xs-10 text-right" role="header" aria-label="Sherezade Atienzar">
                 <h1>Sherezade Atienzar</h1>
-                <small style="font-size: 40pt">Actríz</small>
+                <small>Actríz</small>
             </div>
+
+            <div class="navbar-header col-xs-2">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+
         </div>
     </div>
 
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-    </div>
-
-
     <div class="container-fluid">
-        <div class="row">
-            <div id="conjunto" class="col-sm-12"> 
-                    <div id="menu">
-                        <div class="collapse navbar-collapse" id="myNavbar">
-                            <aside class="menu_lateral" role="menu">
-                                <ul id="menu_lista">
-                                    <a href="index.html" aria-label="index" role="menuitem"><li>Inicio</li></a>
-                                    <a href="book.html" aria-label="book" role="menuitem"><li>Book</li></a>
-                                    <a href="showreel.html" aria-label="showreel" role="menuitem"><li>Showreel</li></a>
-                                    <a href="cv.html" aria-label="curriculum" role="menuitem"><li>Curriculum</li></a>
-                                    <a href="representacion.html" aria-label="representation" role="menuitem"><li>Representación</li></a>
-                                </ul>
-                            </aside>
-                        </div>    
+            <div class="row">
+                <div id="conjunto" class="col-sm-12 text-right"> 
+                        <div id="menu">
+                            <div class="collapse navbar-collapse" id="myNavbar">
+                                <aside class="menu_lateral" role="menu">
+                                    <ul class="list-unstyled" id="menu_lista">
+                                        <a href="index.html" aria-label="index" role="menuitem"><li>Inicio</li></a>
+                                        <a href="book.html" aria-label="book" role="menuitem"><li>Book</li></a>
+                                        <a href="showreel.html" aria-label="showreel" role="menuitem"><li>Showreel</li></a>
+                                        <a href="cv.html" aria-label="curriculum" role="menuitem"><li>Curriculum</li></a>
+                                        <a href="representacion.html" aria-label="representation" role="menuitem"><li>Representación</li></a>
+                                    </ul>
+                                </aside>
+                            </div>    
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-            
 
-    <footers>
-        <i class="fa fa-facebook-square" style="font-size:24px"></i>
-        <i class="fa fa-instagram" style="font-size:24px"></i>
-        <i class="fa fa-youtube-play" style="font-size:24px"></i>
+
+
+    <footers class="navbar-fixed-bottom text-right">
+        <a href=""><img src="img/face.png" alt="icono con enlace a facebook" width="50px" height="50px"></a>
+        <a href=""><img src="img/inst.png" alt="icono con enlace a instagram" width="50px" height="50px"></a>
+        <a href=""><img src="img/youtube.png" alt="icono con enlace a youtube" width="50px" height="50px"></a>
     </footer>
 
     <script src="../vendor/jquery/jquery.min.js"></script>
