--- a/book.old.html
+++ b/book.old.html
@@ -51,17 +51,15 @@
                     </div>
                 </div>
             </div>
-    </div>
+        </div>
 
 <!-- FIN DE NOMBRE Y MENU -->
 
-
-<!-- COMIENZO SLIDER -->
-
-
+    <div id="conjunto"> 
+        <!-- PRUEBA SLIDER INICIO-->
         <div class="container-fluid">
             <div class="row">
-                    <div id="c-slider">
+                    <div id="c-slider" class="col-xs-12">
                         <div id="slider" role="slider">
                             <section>
                                 <img src="img/alvaross1.jpg" alt="Fotografía de Sherezade Atienzar - Actriz">
@@ -125,8 +123,11 @@
             </div>
         <script src="js/slider.js"></script>
        
+        <!-- PRUEBA SLIDER FINAL-->
 
-<!-- FIN SLIDER -->
+    </div>
+    </div>
+
 
 <!-- FOOTER-->
 
