--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 </head>
 <body id="home">
     
+<!--todo esto es el nombre y el menu, tiene que ir en todas las paginas-->
+
     <div class="container-fluid">
         <div class="row">
-            <div id="nombre" class="col-xs-10 text-right" role="header" aria-label="Sherezade Atienzar">
+            <div id="nombre" class="col-xs-12 text-right" role="header" aria-label="Sherezade Atienzar">
                 <h1>Sherezade Atienzar</h1>
                 <small>Actríz</small>
             </div>
-
-            <div class="navbar-header col-xs-2">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        </div>
+        <div class="row">
+            <div class="navbar-header col-xs-12 text-right">
+                <button id="boton-menu" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -49,13 +52,20 @@
             </div>
         </div>
 
+<!-- FIN DE NOMBRE Y MENU -->
 
 
-    <footers class="navbar-fixed-bottom text-right">
+
+<!-- FOOTER-->
+
+    <footer class="navbar-fixed-bottom text-right">
         <a href="https://www.facebook.com/sherezade.garciaatienzar"><img src="img/face.png" alt="icono con enlace a facebook" width="50px" height="50px"></a>
         <a href="https://www.instagram.com/milyunan0ches/"><img src="img/inst.png" alt="icono con enlace a instagram" width="50px" height="50px"></a>
         <a href="https://www.youtube.com/user/MsBluewords"><img src="img/youtube.png" alt="icono con enlace a youtube" width="50px" height="50px"></a>
     </footer>
+
+<!-- FIN DEL FOOTER-->
+
 
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
